[package]
name = "rememberme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
paperclip = { version = "0.8", features = ["actix4"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "sqlite", "migrate" ] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.10.0"
anyhow = "1.0.69"
thiserror = "1.0.39"
dotenvy = "0.15.6"
